Fixed mindcrack logos on <=IE11 Removed text-shadows due to horrible performance on iOS. Fixed gradient in header to compensate for lack of text-shadow. Resolves #14 (use inline styles when exporting from illustrator from now on) Made sure the browser detection is actually correct.

--- a/theme/mindcrack/assets/stylesheets/style.scss
+++ b/theme/mindcrack/assets/stylesheets/style.scss
@@ -166,45 +166,35 @@ header#main-header
 	position: relative;
 	z-index: 0;
 
-	// cut the top padding at the xL breakpoint to prevent the header from becoming too tall.
-	@include media-breakpoint-up(xl) {
-		padding-top: 10rem;
+
+	background-image:	url('../images/mindcrack_header.jpg');
+	background-image:	linear-gradient(to bottom, rgba(0,0,0,0.1) 0%, rgba(0,0,0,1.0) 65%),
+						url('../images/mindcrack_header.jpg'); 
+
+	// Adjust gradient on various sizes to make readable
+	@include media-breakpoint-up(sm) {
+		background-image:	linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.95) 75%),
+							url('../images/mindcrack_header.jpg'); 
+ 	}
+
+	@include media-breakpoint-up(md) {
+		background-image:	linear-gradient(to bottom, rgba(0,0,0,0) 20%, rgba(0,0,0,0.95) 75%),
+							url('../images/mindcrack_header.jpg'); 
 	}
 
-
-	// Move background details to :before to keep the other menu elements from being affected
-	&:before {
-		content: "";
-    	position: absolute;
-    	left: 0;
-    	top: 0;
-  		z-index: -1;
-  		display: block;
-  		width:100%;
-  		height:100%;
-
-		background-image: url('../images/mindcrack_header.jpg');
-
-		// Need to fix for some microsoft browsers
-		background-image: linear-gradient(to bottom, rgba(0,0,0,0.0) 20%, rgba(0,0,0,0.95) 85%),
-						  url('../images/mindcrack_header.jpg'); 
-
-		// When the screen is super small, the logo moves up and becomes less readable, this darkens it
-		@include media-breakpoint-down(sm) {
-			background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.95) 75%),
-				url('../images/mindcrack_header.jpg'); 
-	 	}
-
-	 	@include media-breakpoint-down(xs) {
-			background-image: linear-gradient(to bottom, rgba(0,0,0,0.1) 0%, rgba(0,0,0,1.0) 65%),
-				url('../images/mindcrack_header.jpg'); 
-	 	}
+ 	@include media-breakpoint-up(lg) {
+	background-image:	linear-gradient(to bottom, rgba(0,0,0,0.0) 20%, rgba(0,0,0,0.95) 85%),
+					  	url('../images/mindcrack_header.jpg'); 
+ 	}
 
 	 	// Scale the background with the size of the header (may need to look into compatibility)
 		background-size: cover;
 		background-position: 50% 14%;
-	}
 
+	// cut the top padding at the xL breakpoint to prevent the header from becoming too tall.
+	@include media-breakpoint-up(xl) {
+		padding-top: 10rem;
+	}
 
 	nav {
 		padding-top: 0.5rem;
@@ -230,7 +220,6 @@ header#main-header
 	 		li.nav-item {
 	 			margin-right: 0;
  				margin-left: 1rem;
- 				text-shadow: 0 0 3em rgba(0,0,0,1.0);
  			}
 
 	 		@include media-breakpoint-up(lg) {
@@ -642,7 +631,6 @@ section#hero {
 	h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
 		color: $mc-white;
 	}
-	text-shadow: 0 0 3em rgba(0,0,0,0.5);
 
 	a {
 		color: white;
@@ -1262,9 +1250,6 @@ article.podcast {
 		background-size: cover;
 		background-position: 50% 14%;
 		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#F2000000',GradientType=0 );
-		&:before {
-			background-image: none;
-		}
 
 		@include media-breakpoint-down(sm) {
 			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1a000000', endColorstr='#F2000000',GradientType=0 );
